basic layout section one

--- a/css/main.css
+++ b/css/main.css
@@ -142,4 +142,14 @@ nav:hover {
   background: white;
 }
 
+main {
+  padding: 2rem 0;
+}
+
+.section__wrap {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
 /*# sourceMappingURL=main.css.map */
