--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,16 @@ html {
   font-family: "Open Sans", sans-serif;
 }
 
+.one h1 {
+  font-size: 3.7rem;
+  font-family: "Fjalla One", sans-serif;
+  color: #465775;
+}
+.one p {
+  font-size: 1.25rem;
+  font-style: italic;
+}
+
 header {
   background-color: #465775;
   padding-bottom: 0.5rem;
@@ -150,6 +160,27 @@ main {
   width: 90%;
   margin: 0 auto;
   max-width: 1200px;
+}
+
+.one__card {
+  background-color: #a4a5ae;
+  position: relative;
+}
+.one__card__text {
+  padding: 0 1rem;
+}
+.one__card__text p {
+  margin-bottom: 2rem;
+}
+.one__card__text a {
+  padding: 8px 10px;
+  background-color: #ffe347;
+  width: 200px;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
