--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -15,7 +15,32 @@ main {
 .one__card {
   background-color: abstracts.$silver;
   position: relative;
+  height: 750px;
+  max-width: 400px;
+  margin: 15rem auto 0;
+  padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+
+  img {
+    position: absolute;
+    // opacity: 0;
+
+    &.chef__img {
+      width: 90%;
+      z-index: 2;
+      top: -200px;
+      right: 0;
+    }
+    &.fern__img {
+      width: 82%;
+      z-index: 0;
+      top: -180px;
+      left: 0;
+    }
+  }
   &__text {
+    margin-top: auto;
     padding: 0 1rem;
     p {
       margin-bottom: 2rem;
