--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,9 @@ html {
   font-size: 1.25rem;
   font-style: italic;
 }
+.one .one__card__text a {
+  font-size: 1.125rem;
+}
 
 header {
   background-color: #465775;
@@ -156,6 +159,38 @@ nav:hover {
   width: 90%;
   margin: 0 auto;
   max-width: 1200px;
+  border: 2px solid yellow;
+}
+
+.one {
+  padding: 10rem 0;
+  border: 2px solid red;
+}
+
+.one__card {
+  padding: 8rem 2rem;
+  background-color: #e6e6e6;
+  position: relative;
+}
+.one__card p {
+  margin-bottom: 2rem;
+}
+.one__card a {
+  background-color: #ffe347;
+  width: 150px;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
+  padding: 1rem 0;
+}
+.one__card__stripes {
+  width: 100%;
+  height: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-image: repeating-linear-gradient(45deg, transparent 0 10px, black 10px 20px);
 }
 
 /*# sourceMappingURL=main.css.map */
