--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -18,4 +18,9 @@ html {
     font-size: 1.25rem;
     font-style: italic;
   }
+  .one__card__text {
+    a {
+      font-size: 1.125rem;
+    }
+  }
 }
