--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,7 @@
 @use '../abstracts';
 
 .section__wrap {
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
   max-width: 1200px;
   border: 2px solid yellow;
@@ -10,12 +10,20 @@
 //// Section One ///////
 
 .one {
-  padding: 10rem 0;
+  padding: 4rem 0;
   border: 2px solid red;
 }
 
+.chef__img {
+  width: 300px;
+}
+
+.fern__img {
+  width: 280px;
+}
+
 .one__card {
-  padding: 8rem 2rem;
+  padding: 6rem 2rem 4rem;
   background-color: abstracts.$silver;
   position: relative;
   p {
