--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,6 +1,6 @@
 @use '../abstracts';
 
-.section__wrap {
+.wrap {
   width: 80%;
   margin: 0 auto;
   max-width: 1200px;
@@ -10,20 +10,48 @@
 //// Section One ///////
 
 .one {
-  padding: 4rem 0;
+  padding: 6rem 0;
   border: 2px solid red;
 }
 
+.section__one__wrap {
+  position: relative;
+  z-index: 0;
+  &::after {
+    content: "";
+    display: block;
+    width: 80%;
+    height: 30px;
+    background-color: abstracts.$mYellow;
+    position: absolute;
+    top: 20rem;
+    left: 0;
+  }
+}
+
+.fern {
+  width: 310px;
+}
 .chef__img {
   width: 300px;
+  position: absolute;
+  top: -25px;
+  right: 0;
 }
-
-.fern__img {
-  width: 280px;
+.chef__img::after {
+  content: "";
+  background: red;
+  height: 30px;
+  width: 50px;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  display: block;
 }
-
 .one__card {
-  padding: 6rem 2rem 4rem;
+  z-index: -1;
+  margin-top: -95px;
+  padding: 10rem 2rem 4rem;
   background-color: abstracts.$silver;
   position: relative;
   p {
@@ -40,14 +68,14 @@
   }
   &__stripes {
     width: 100%;
-    height: 20px;
+    height: 30px;
     position: absolute;
     bottom: 0;
     left: 0;
     background-image: repeating-linear-gradient(
       45deg,
-      transparent 0 10px,
-      black 10px 20px
+      transparent 0 20px,
+      black 20px 40px
     );
   }
 }
