--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -24,7 +24,7 @@
     height: 30px;
     background-color: abstracts.$mYellow;
     position: absolute;
-    top: 20rem;
+    top: 21rem;
     left: 0;
   }
 }
@@ -36,7 +36,7 @@
   width: 300px;
   position: absolute;
   top: -25px;
-  right: 0;
+  right: -20px;
 }
 .chef__img::after {
   content: "";
