--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -40,9 +40,15 @@
 
 .fern {
   width: 310px;
+  @include abstracts.mq(600px) {
+    width: 405px;
+  }
 }
 .chef__img {
   width: 300px;
+  @include abstracts.mq(600px) {
+    width: 400px;
+  }
   position: absolute;
   top: -25px;
   right: -20px;
