--- a/css/main.css
+++ b/css/main.css
@@ -199,6 +199,11 @@ nav:hover {
   top: 21rem;
   left: 0;
 }
+@media (min-width: 600px) {
+  .section__one__wrap::after {
+    top: 30rem;
+  }
+}
 @media (min-width: 800px) {
   .section__one__wrap::after {
     width: 430px;
