--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -151,3 +151,50 @@
 //// Section One END ////
 
 /// Section Two ////
+
+.flex__wrap {
+  border: 2px solid red;
+  @include abstracts.flex(column) {
+    align-items: center;
+    gap: 20px;
+  }
+  @include abstracts.mq(800px) {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+.two {
+  background-color: abstracts.$ind;
+  img {
+    width: 60px;
+  }
+}
+
+.icon_info {
+  width: 400px;
+  border: 2px solid yellow;
+  h2 {
+    color: abstracts.$silver;
+  }
+  p {
+    color: white;
+    text-align: center;
+  }
+  @include abstracts.flex(column) {
+    align-items: center;
+    justify-content: center;
+  }
+  .icon__background {
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  img {
+    display: inline;
+  }
+}
