--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,14 @@ html {
   font-size: 1.125rem;
 }
 
+.two h2 {
+  font-size: 2.56rem;
+  font-family: "Fjalla One", sans-serif;
+}
+.two p {
+  font-size: 1.125rem;
+}
+
 header {
   background-color: #465775;
   padding-bottom: 0.5rem;
@@ -322,11 +330,10 @@ nav:hover {
 }
 
 .flex__wrap {
-  border: 2px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 40px;
 }
 @media (min-width: 800px) {
   .flex__wrap {
@@ -336,6 +343,7 @@ nav:hover {
 }
 
 .two {
+  padding: 4rem 0;
   background-color: #465775;
 }
 .two img {
@@ -344,7 +352,6 @@ nav:hover {
 
 .icon_info {
   width: 400px;
-  border: 2px solid yellow;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -352,6 +359,7 @@ nav:hover {
 }
 .icon_info h2 {
   color: #c1becf;
+  margin: 0.5rem;
 }
 .icon_info p {
   color: white;
