--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -24,3 +24,13 @@ html {
     }
   }
 }
+
+.two {
+  h2 {
+    font-size: 2.56rem;
+    font-family: $fjall;
+  }
+  p {
+    font-size: 1.125rem;
+  }
+}
