--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -153,10 +153,9 @@
 /// Section Two ////
 
 .flex__wrap {
-  border: 2px solid red;
   @include abstracts.flex(column) {
     align-items: center;
-    gap: 20px;
+    gap: 40px;
   }
   @include abstracts.mq(800px) {
     flex-direction: row;
@@ -165,6 +164,7 @@
 }
 
 .two {
+  padding: 4rem 0;
   background-color: abstracts.$ind;
   img {
     width: 60px;
@@ -173,9 +173,9 @@
 
 .icon_info {
   width: 400px;
-  border: 2px solid yellow;
   h2 {
     color: abstracts.$silver;
+    margin: 0.5rem;
   }
   p {
     color: white;
