--- a/css/main.css
+++ b/css/main.css
@@ -387,9 +387,24 @@ nav:hover {
 }
 .three .list1 ol {
   margin: 0;
+  color: white;
 }
 .three .three__info_card {
   background-color: white;
+  padding: 2rem 1rem;
+}
+.three .three__info_card h2 {
+  margin-bottom: 2rem;
+  position: relative;
+}
+.three .three__info_card h2::after {
+  content: "";
+  height: 6px;
+  display: block;
+  position: absolute;
+  bottom: -15px;
+  width: 60%;
+  background-color: #ffe347;
 }
 
 /*# sourceMappingURL=main.css.map */
