--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -208,10 +208,25 @@
   .list1 {
     ol {
       margin: 0;
+      color: white;
     }
     background-color: abstracts.$ind;
   }
   .three__info_card {
     background-color: white;
+    padding: 2rem 1rem;
+    h2 {
+      margin-bottom: 2rem;
+      position: relative;
+    }
+    h2::after {
+      content: "";
+      height: 6px;
+      display: block;
+      position: absolute;
+      bottom: -15px;
+      width: 60%;
+      background-color: abstracts.$mYellow;
+    }
   }
 }
