--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -216,7 +216,7 @@
     background-color: white;
     padding: 2rem 1rem;
     h2 {
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
       position: relative;
     }
     h2::after {
@@ -227,6 +227,12 @@
       bottom: -15px;
       width: 60%;
       background-color: abstracts.$mYellow;
+    }
+    a {
+      margin-top: 2rem;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: black;
     }
   }
 }
