--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -205,6 +205,7 @@
 
 .grid__wrap {
   display: grid;
+  width: 75%;
   grid-template-columns: 1fr;
   grid-template-areas:
     "img1"
@@ -212,6 +213,20 @@
     "img2"
     "info"
     "img3";
+  @include abstracts.mq(750px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "img2 img2"
+      "img1 list"
+      "info info"
+      "img3 img3";
+  }
+  @include abstracts.mq(1000px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "img1 img1 info info"
+      "img3 list img2 img2";
+  }
 }
 .three {
   background-color: abstracts.$mYellow;
