--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -222,6 +222,7 @@
       "img3 img3";
   }
   @include abstracts.mq(1000px) {
+    width: 58%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-areas:
       "img1 img1 info info"
@@ -242,6 +243,16 @@
 
   .img3 {
     grid-area: img3;
+    @include abstracts.mq(1000px) {
+      background-image: url("../../images/food3.jpg");
+      background-position: center;
+      background-size: cover;
+    }
+    img {
+      @include abstracts.mq(1000px) {
+        display: none;
+      }
+    }
   }
   .list1 {
     grid-area: list;
