--- a/css/main.css
+++ b/css/main.css
@@ -392,7 +392,8 @@ nav:hover {
 }
 @media (min-width: 1000px) {
   .grid__wrap {
-    width: 58%;
+    width: 69%;
+    max-width: 950px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-areas: "img1 img1 info info" "img3 list img2 img2";
   }
@@ -410,6 +411,12 @@ nav:hover {
 }
 .three .img3 {
   grid-area: img3;
+  display: none;
+}
+@media (min-width: 750px) {
+  .three .img3 {
+    display: block;
+  }
 }
 @media (min-width: 1000px) {
   .three .img3 {
@@ -433,8 +440,16 @@ nav:hover {
 }
 .three .three__info_card {
   grid-area: info;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: white;
   padding: 2rem 1rem;
+}
+@media (min-width: 1120px) {
+  .three .three__info_card {
+    padding: 2rem 3rem;
+  }
 }
 .three .three__info_card h2 {
   margin-bottom: 2.5rem;
