added stripe seperator between section 3 and 4

--- a/css/main.css
+++ b/css/main.css
@@ -471,4 +471,9 @@ nav:hover {
   color: black;
 }
 
+.stripe__seperator {
+  height: 50px;
+  background-image: repeating-linear-gradient(45deg, transparent 0 20px, black 20px 40px);
+}
+
 /*# sourceMappingURL=main.css.map */
