--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -299,3 +299,14 @@
     }
   }
 }
+
+//// Stripes for Seperation Div ////
+
+.stripe__seperator {
+  height: 50px;
+  background-image: repeating-linear-gradient(
+    45deg,
+    transparent 0 20px,
+    black 20px 40px
+  );
+}
