--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -318,3 +318,11 @@
     black 20px 40px
   );
 }
+
+//// Stripes Div END //////
+
+//// Section Four Start //////@at-root
+.four {
+  background-color: abstracts.$mYellow;
+  padding: 4rem 0;
+}
