--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -352,11 +352,11 @@
   .grid__wrap {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 400px 400px;
+    grid-template-rows: 450px 450px;
     width: 75%;
     @include abstracts.mq(750px) {
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 400px;
+      grid-template-rows: 450px;
     }
     @include abstracts.mq(1000px) {
       width: 90%;
@@ -365,9 +365,17 @@
   }
 
   .four__list {
+    padding: 0 2rem;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .four__info_card {
+    padding: 0 2rem;
     background-color: abstracts.$ind;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
