--- a/css/main.css
+++ b/css/main.css
@@ -503,6 +503,7 @@ nav:hover {
 .three .list1 ol {
   margin: 0;
   color: white;
+  padding: 0;
 }
 .three .list1 ol li + li {
   margin-top: 2rem;
@@ -552,30 +553,25 @@ nav:hover {
 .four .grid__wrap {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 450px 450px;
   width: 75%;
-}
-@media (min-width: 750px) {
-  .four .grid__wrap {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 450px;
-  }
+  max-width: 500px;
 }
 @media (min-width: 1000px) {
   .four .grid__wrap {
+    grid-template-columns: 1fr 1fr;
     width: 90%;
     max-width: 950px;
   }
 }
 .four .four__list {
-  padding: 0 2rem;
+  padding: 2rem;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 .four .four__info_card {
-  padding: 0 2rem;
+  padding: 2rem;
   background-color: #465775;
   display: flex;
   flex-direction: column;
